pilot/pkg/security/authz/builder/testdata/http/td-aliases-source-principal-out.yaml
name: envoy.filters.http.rbac
typedConfig:
  '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
  rules:
    policies:
      ns[foo]-policy[httpbin]-rule[0]:
        permissions:
        - andRules:
            rules:
            - any: true
        principals:
        - andIds:
            ids:
            - orIds:
                ids:
                - authenticated:
                    principalName:
                      safeRegex:
                        googleRe2: {}
                        regex: .*/ns/dubbo-system/.*
            - orIds:
                ids:
                - authenticated:
                    principalName:
                      safeRegex:
                        googleRe2: {}
                        regex: .+
                - authenticated:
                    principalName:
                      safeRegex:
                        googleRe2: {}
                        regex: spiffe://.*/ns/foo/sa/all-td
                - authenticated:
                    principalName:
                      safeRegex:
                        googleRe2: {}
                        regex: spiffe://.*-td/ns/foo/sa/prefix-td
                - authenticated:
                    principalName:
                      exact: spiffe://some-trustdomain/ns/foo/sa/prefix-td
  shadowRulesStatPrefix: istio_dry_run_allow_
